feat: add deleteByName method to PersonRepository and corresponding test