@@ -156,7 +156,27 @@ class ReflectionRepositorySupplierTest {
             soft.assertThat(method.type()).isEqualTo(RepositoryType.QUERY);
             List<RepositoryParam> params = method.params();
             soft.assertThat(params).isNotEmpty().hasSize(1);
-            RepositoryParam repositoryParam = params.get(0);
+            RepositoryParam repositoryParam = params.getFirst();
+            soft.assertThat(repositoryParam.name()).isNotNull();
+            soft.assertThat(repositoryParam.is()).isEmpty();
+            soft.assertThat(repositoryParam.by()).isNotNull();
+            soft.assertThat(repositoryParam.type()).isEqualTo(String.class);
+        });
+    }
+
+    @DisplayName("should delete by name")
+    @Test
+    void shouldDeleteByName() {
+        RepositoryMetadata metadata = supplier.apply(PersonRepository.class);
+        Optional<RepositoryMethod> query = metadata.find("deleteByName");
+        SoftAssertions.assertSoftly(soft -> {
+            soft.assertThat(query).isPresent();
+            var method = query.orElseThrow();
+            soft.assertThat(method.query()).isEmpty();
+            soft.assertThat(method.type()).isEqualTo(RepositoryType.DELETE_BY);
+            List<RepositoryParam> params = method.params();
+            soft.assertThat(params).isNotEmpty().hasSize(1);
+            RepositoryParam repositoryParam = params.getFirst();
             soft.assertThat(repositoryParam.name()).isNotNull();
             soft.assertThat(repositoryParam.is()).isEmpty();
             soft.assertThat(repositoryParam.by()).isNotNull();
